--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-flask==2.3.3
-redis==5.0.1
-rq==1.15.1
-gunicorn==21.2.0
-torch==2.3.1
-faster-whisper==0.10.1
-yt-dlp==2024.11.4
-transformers==4.44.2
-sentencepiece==0.2.0
-colorama==0.4.6
-stripe==7.9.0
+Flask==2.3.3
+redis==5.0.0
+anthropic==0.5.0
+stripe==5.5.0
+yt-dlp==2023.7.6
+pydub==0.25.1
+openai-whisper==20230314
 python-dotenv==1.0.0
-openai>=1.13.3
+flask-cors==4.0.0
+requests==2.31.0
+gunicorn==21.2.0
