--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ Flask==2.3.3
 redis==5.0.0
 anthropic==0.5.0
 stripe==5.5.0
-yt-dlp==2023.7.6
+yt-dlp
 pydub==0.25.1
-openai-whisper==20230314
 python-dotenv==1.0.0
 flask-cors==4.0.0
 requests==2.31.0
