--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,3 +2,4 @@ nixPkgs = { python311, ffmpeg }
 phases.build
 cmds = "pip install -r requirements.txt"
 start
+cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
