--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,8 @@
-nixPkgs = { python311, ffmpeg }
+phases.setup
+nixPkgs = "python311", "ffmpeg"
+
 phases.build
-cmds = "pip install -r requirements.txt"
+cmds ="pip install -r requirements.txt"
+
 start
 cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
