--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,12 @@
 # nixpacks.toml
-phases.setup
-nixPkgs = "python311", "ffmpeg"
+[phases.setup]
+nixPkgs = ["python311", "ffmpeg", "gcc"]
 
-# Pip bei Build/Install ausführen (wheel-first)
-phases.install
-cmds = "pip install -r requirements.txt"
+[phases.install]
+cmds = [
+  "pip install --upgrade pip setuptools wheel",
+  "pip install -r requirements.txt"
+]
 
-start
+[start]
 cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
