--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-Flask==2.3.3
-redis==5.0.0
-anthropic==0.5.0
-stripe==5.5.0
-yt-dlp
-pydub==0.25.1
-python-dotenv==1.0.0
-flask-cors==4.0.0
-requests==2.31.0
-gunicorn==21.2.0
+Flask
+gunicorn
+redis
 rq==1.15.1
+yt-dlp
+pydub
 faster-whisper==1.0.1
 ctranslate2==4.4.0
 numpy<2
-pytest==7.4.4
+python-dotenv
+requests
+
