--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-Flask
-gunicorn
-redis
+flask==3.0.0
+gunicorn==21.2.0
+redis==5.0.1
 rq==1.15.1
-yt-dlp
-pydub
 faster-whisper==1.0.1
 ctranslate2==4.4.0
 numpy<2
-python-dotenv
-requests
-
+pydub
+yt-dlp
