--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,5 @@
-# nixpacks.toml
 [phases.setup]
-nixPkgs = ["python311", "ffmpeg", "gcc"]
+nixPkgs = ["python311", "ffmpeg"]
 
 [phases.install]
 cmds = [
@@ -10,3 +9,4 @@ cmds = [
 
 [start]
 cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
+
