--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,13 @@
 [phases.setup]
-nixPkgs = ["python311", "ffmpeg"]
+nixPkgs = ["python311", "ffmpeg", "gcc", "pkg-config"]
 
 [phases.install]
 cmds = [
-  "pip install --upgrade pip setuptools wheel",
-  "pip install -r requirements.txt"
+  "python -m pip install --upgrade pip setuptools wheel",
+  "PIP_PREFER_BINARY=1 pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
+cmd = "gunicorn server:app --bind 0.0.0.0:$PORT"
+
 
