--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ ctranslate2>=3.24
 numpy<2
 ffmpeg-python>=0.2      # optional; CLI kommt ueber Nix
 yt-dlp>=2024.0          # optional, falls genutzt
+python-dotenv>=1.0.1
+
