--- a/railway.toml
+++ b/railway.toml
@@ -6,5 +6,5 @@ builder = "NIXPACKS"
 PORT = "8080"
 
 [deploy]
-startCommand = "uvicorn asgi:app --host 0.0.0.0 --port $PORT"
+startCommand = "sh -c \"uvicorn asgi:app --host 0.0.0.0 --port ${PORT:-8080}\""
 healthcheckPath = "/healthz"
