--- a/railway.toml
+++ b/railway.toml
@@ -6,5 +6,12 @@ builder = "NIXPACKS"
 PORT = "8080"
 
 [deploy]
-startCommand = "sh -c \"uvicorn asgi:app --host 0.0.0.0 --port ${PORT:-8080}\""
 healthcheckPath = "/healthz"
+
+[[deploy.services]]
+name = "web"
+startCommand = "sh -c \"uvicorn asgi:app --host 0.0.0.0 --port ${PORT:-8080}\""
+
+[[deploy.services]]
+name = "worker"
+startCommand = "python worker.py"
