Use tiny whisper model and optional preload

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ NIXPACKS_USE_NIX=1
 NIXPACKS_CONFIG_PATH=./nixpacks.toml
 WHISPER_DEVICE=cpu
 WHISPER_CPU_MODEL_ID=tiny
+WHISPER_CPU_MODEL_ID_TRANSCRIBE=
+WHISPER_CPU_MODEL_ID_TRANSLATE=
+WHISPER_CPU_MODEL_ID_EN=
+WHISPER_PRELOAD_MODEL=0
+WHISPER_PRELOAD_TASK=translate
 BASIC_AUTH_USERNAME=
 BASIC_AUTH_PASSWORD=
 
